Dommerplan 1.3.3 - Martin Juhl - mj@casalogic.dk

  * Fix så udekampe ikke bliver vist i den normale plan...

Dommerplan 1.3.2 - Martin Juhl - mj@casalogic.dk

  * Fix i sync, så alle info kommer med ved første sync...

Dommerplan 1.3.1 - Martin Juhl - mj@casalogic.dk
 
  * Fixet nulstilling af statistik..

Dommerplan 1.3.0 - Martin Juhl - mj@casalogic.dk

  * Ny menu..
  * Plugin-struktur..

Dommerplan 1.2.3 - Martin Juhl - mj@casalogic.dk

  * Fixet setup.php..

Dommerplan 1.2.2 - Martin Juhl - mj@casalogic.dk

  * Mere plads til længere (hold)navne...
  * Tilføjet "DBBF:" foran DBBF dommere..
  * addgame.php cleanup..
  * addallsources.php cleanup..