@@ -1,3 +1,9 @@
+Dommerplan 1.3.6 - Martin Juhl - mj@casalogic.dk
+
+  * Fixet Kampnummerhentning, Bug fra resultater.basket.dk..
+  * Fixet DBBF Dommerhentning...
+  * Lagt getClubs og getGame under commonFunctions..
+
 Dommerplan 1.3.3 - Martin Juhl - mj@casalogic.dk
 
   * Fix så udekampe ikke bliver vist i den normale plan...
